tests/ui/suggestions/issue-114797-bad-parentheses-dyn-trait.stderr
error: incorrect parentheses around trait bounds
  --> $DIR/issue-114797-bad-parentheses-dyn-trait.rs:6:30
   |
LL | fn assert_send() -> *mut dyn (Trait + Send) {
   |                              ^            ^
   |
help: fix the parentheses
   |
LL - fn assert_send() -> *mut dyn (Trait + Send) {
LL + fn assert_send() -> *mut (dyn Trait + Send) {
   |

error: incorrect parentheses around trait bounds
  --> $DIR/issue-114797-bad-parentheses-dyn-trait.rs:11:17
   |
LL | fn foo2(_: &dyn (Trait + Send)) {}
   |                 ^            ^
   |
help: fix the parentheses
   |
LL - fn foo2(_: &dyn (Trait + Send)) {}
LL + fn foo2(_: &(dyn Trait + Send)) {}
   |

error: incorrect parentheses around trait bounds
  --> $DIR/issue-114797-bad-parentheses-dyn-trait.rs:14:16
   |
LL | fn foo3(_: &dyn(Trait + Send)) {}
   |                ^            ^
   |
help: fix the parentheses
   |
LL - fn foo3(_: &dyn(Trait + Send)) {}
LL + fn foo3(_: &(dyn Trait + Send)) {}
   |

error: aborting due to 3 previous errors

